--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
   <title>kanyaga</title>
   
 	<style>
-		body {background: #330000; color: #fff; font-family: monospace;}
-    div.container {
-    height: 10em;
-    position: relative;
-    }
-    div.container p {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    }
+	body {
+		background: #330000; 
+		color: #fff; 
+		font-family: monospace;
+	}
+	div.container {
+		height: 10em;
+		position: relative;
+	}
+	div.container p {
+		margin: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-right: -50%;
+		transform: translate(-50%, -50%);
+		font-size:2em;
+	}
 	</style>
 
 </head>
@@ -26,6 +31,15 @@
   <p>kanyaga</p>
 </div>
   
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5X6Z6BKHBD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5X6Z6BKHBD');
+</script>
+	
 </body>
 </html>
