--- a/index.html
+++ b/index.html
@@ -56,19 +56,25 @@ html, body {
     width: 200px;
 }
 .container {
-    height: 90vh;
+    height: 98vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 </style>
 </head>
-<body>           
+<body>
+      <div class="container">
+           
   <div id="content" class="item">
   <img src="logo.svg" id="logo">
 	<p> 
 		Releasing on physical, digital and cosmic wavelengths.
 	</p>
 </div>
+
+        </div>
+
+
 </body>
 </html>
