--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ html, body {
 </style>
 </head>
 <body>
-           
+<div class="container">
   <div id="content" class="item">
     <img src="logo.svg" id="logo">
   </div>
-
+</div>
 </body>
 </html>
