--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@ html, body {
 	margin: 20px 0;
 }
 #content a {color: red; text-decoration: none;}
-.item {
-    width: 200px;
-}
+.item {}
 .container {
     height: 98vh;
     display: flex;
