--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@ html, body {
     <img src="logo.svg" id="logo">
   </div>
 </div>
+
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="8f77e0aa-6a49-4635-9af0-214a3f359aae"></script>
+	
 </body>
 </html>
