--- a/64px/keys3.html
+++ b/64px/keys3.html
@@ -22,7 +22,7 @@ canvas {image-rendering: crisp-edges; image-rendering: pixelated; border: #37313
 </head>
 <body>
 
-<script src="three.min.js"></script>
+<script src="js/three.min.js"></script>
 <script>
 // player
 player = {
