--- a/64px/tst2.html
+++ b/64px/tst2.html
@@ -307,7 +307,7 @@
 
 
       // ground plane
-      var groundtexture = new THREE.TextureLoader().load("pics/Lake_Natron.jpg");
+      var groundtexture = new THREE.TextureLoader().load("assets/pattern3.gif");
       groundtexture.magFilter = THREE.NearestFilter;
       groundtexture.minFilter = THREE.NearestFilter;
       var gggeometry = new THREE.PlaneGeometry( 1000, 1000, 1000, );
