--- a/64px/lvl.html
+++ b/64px/lvl.html
@@ -8,8 +8,8 @@
           padding: 0;
         }
         @font-face {
-          font-family: "Pico8";
-          src: url("font/pico-8.ttf") format("truetype");
+          font-family: "PICO-8";
+          src: url("font/PICO-8.ttf") format("truetype");
         }
         body {
           margin: 0;
@@ -20,7 +20,7 @@
           justify-content: center;
           align-items: center;
           height: 100vh;
-          font-family: "Pico8", monospace;
+          font-family: "PICO-8", monospace;
           color: #eee;
           user-select: none;
         }
@@ -133,7 +133,7 @@
       <div id="overlay"></div>
 
       <script src="js/three.min.js"></script>
-      <script src="js/nipplejs.min.js"></script>
+      <script src="js/nipplejs.js"></script>
 
       <script type="text/javascript">
         var camypos = 0;
