--- a/64px/lvl.html
+++ b/64px/lvl.html
@@ -246,7 +246,7 @@
           // document.body.appendChild(lvlbump);
 
           olimg = new Image();
-          olimg.src = "Lake_Natron_bump.jpg";
+          olimg.src = "assets/Lake_Natron_bump.jpg";
 
           olimg.onload = () => {
             stx.drawImage(olimg, 0, 0);
