--- a/64px/tst4.html
+++ b/64px/tst4.html
@@ -7,10 +7,12 @@
           margin: 0;
           padding: 0;
         }
-        @font-face {
-          font-family: "Pico8";
-          src: url("font/pico-8.ttf") format("truetype");
-        }
+      @font-face {
+        font-family: "PICO-8";
+        src: url("font/PICO-8.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
         body {
           margin: 0;
           background: #1a1a1b;
@@ -20,7 +22,7 @@
           justify-content: center;
           align-items: center;
           height: 100vh;
-          font-family: "Pico8", monospace;
+        font-family: "PICO-8";
           color: #eee;
           user-select: none;
         }
@@ -72,7 +74,7 @@
       <div id="overlay"></div>
 
       <script src="js/three.min.js"></script>
-      <script src="js/nipplejs.min.js"></script>
+      <script src="js/nipplejs.js"></script>
 
       <script type="text/javascript">
         var camypos = 0;
@@ -187,7 +189,7 @@
           // document.body.appendChild(lvlbump);
 
           olimg = new Image();
-          olimg.src = "Lake_Natron_bump.jpg";
+          olimg.src = "assets/Lake_Natron_bump.jpg";
 
           olimg.onload = () => {
             stx.drawImage(olimg, 0, 0);
