--- a/64px/tst4.html
+++ b/64px/tst4.html
@@ -68,7 +68,7 @@
       <div id="overlay"></div>
 
       <script src="js/three.min.js"></script>
-      <script src="js/nipplejs.min.js"></script>
+      <script src="js/nipplejs.js"></script>
 
       <script type="text/javascript">
         var camypos = 0;
